stack-test4.log
Stack has not been tested with GHC versions above 9.4, and using 9.6.7, this may fail
Stack has not been tested with Cabal versions above 3.8, but version 3.10.3.0 was found, this may fail
p3-0.1.0.0: unregistering (local file changes: Small.hs)
p3> build (lib + exe + test)
Preprocessing library for p3-0.1.0.0..
Building library for p3-0.1.0.0..
[9 of 9] Compiling Small [Source file changed]

/home/diego/Desktop/p3/Small.hs:203:13: error: [-Wunused-local-binds, Werror=unused-local-binds]
    Defined but not used: ‘mAfter’
    |
203 |   let (res, mAfter) = reduceFully body mStart
    |             ^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the following errors:
       
       [S-7011]
       While building package p3-0.1.0.0 (scroll up to its section to see the error) using:
       /home/diego/.stack/setup-exe-cache/x86_64-linux-tinfo6/Cabal-simple_SvXsv1f__3.10.3.0_ghc-9.6.7 --verbose=1 --builddir=.stack-work/dist/x86_64-linux-tinfo6/Cabal-3.10.3.0 build lib:p3 exe:front exe:sim test:p3-test --ghc-options ""
       Process exited with code: ExitFailure 1 
